--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -128,7 +128,7 @@ and Decoder. </p>
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Auto-Encoder.png" width="400px" height="200px" />
+    <img src="/assets/img/Auto-Encoder.png" width="80%" height="auto" />
     <div class="caption" id="figure1" >Figure 1</div>
 </div>
 
@@ -145,7 +145,7 @@ and Decoder. </p>
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/True Positive.ppm" width="400px" height="200px"  id="figure2" />
+    <img src="/assets/img/True Positive.ppm" width="80%" height="auto"  id="figure2" />
     <div class="caption" >Figure 2</div>
 </div>
 
@@ -183,7 +183,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#fig
 There are 4 different testing sets, including crack, cut, hole, and print. Figure <a href="#figure4">4</a> shows some samples of these test images.
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Def_Data.JPG" width="400px" height="200px" id="figure4" />
+    <img src="/assets/img/Def_Data.JPG" width="80%" height="auto" id="figure4" />
     <div class="caption">Figure 4</div>
 </div>
 
@@ -516,7 +516,7 @@ This part is for the decoder
 The model has been trained over the mentioned dataset for 1000 epochs. We used the ``L2`` loss for training our network using the ADAM optimizer. Figure <a href="figure5">5</a> shows the loss for each step (each epoch has approximately 63 steps).
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Training_loss.JPG" id="figure5" width= "100%"  height="auto" />
+    <img src="/assets/img/Training_loss.JPG" id="figure5" width= "70%"  height="auto" />
     <div class="caption">Figure 5</div>
 </div>
 
@@ -528,6 +528,10 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
 
 
 <h4 id="more-information">4.1  Outputs</h4>
+
+
+<h2 id="more-information">5 Methodology</h2>
+
 
 
 <h2 id="more-information">4. Discussions</h2>
