--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -145,7 +145,7 @@ and Decoder. </p>
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/True Positive.ppm" width="80%" height="auto"  id="figure2" />
+    <img src="/assets/img/True Positive.ppm" width="65%" height="auto"  id="figure2" />
     <div class="caption" >Figure 2</div>
 </div>
 
@@ -171,7 +171,7 @@ For training, we have 390 fine images of hazelnuts. look at figure <a href="#fig
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Good_Data.JPG" width="400px" height="200px" id="figure3"/>
+    <img src="/assets/img/Good_Data.JPG" width="80%" height="auto" id="figure3"/>
     <div class="caption">Figure 3</div>
 </div>
 
@@ -526,11 +526,13 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
 </div>
 
 
+<h4 id="more-information">4.2  Methodology</h4>
 
-<h4 id="more-information">4.1  Outputs</h4>
+
+<h4 id="more-information">4.3  Outputs</h4>
 
 
-<h2 id="more-information">5 Methodology</h2>
+
 
 
 
