--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -535,9 +535,16 @@ We are going to train our network to reconstruct the input image from the latent
   <li>Testing: An image with a defect will have a different output compared to the expected input. Hence errors will be high. Apply a threshold for the reconstruction error to detect the error. </li>
 </ul>
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Algorithm.JPG" id="figure7" width= "100%"  height="auto" />
+    <div class="caption">Figure 7</div>
+</div>
+
+
 
 <h4 id="more-information">4.3  Outputs</h4>
 
+We used the algorithm to detect the defect in the testing images, and for every dataset, we represented a result. 
 
 
 
