--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -521,10 +521,15 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
 </div>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/4-F1.JPG" id="figure6" width= "100%"  height="auto" />
+    <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
     <div class="caption">Figure 6</div>
 </div>
 
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/2_2-F1.JPG" id="figure7" width= "100%"  height="auto" />
+    <div class="caption">Figure 7</div>
+</div>
 
 <h4 id="more-information">4.2  Methodology</h4>
 
