--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -541,16 +541,25 @@ We are going to train our network to reconstruct the input image from the latent
 </ul>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Algorithm.JPG" id="figure7" width= "70%"  height="auto" />
-    <div class="caption">Figure 7</div>
+    <img src="/assets/img/Algorithm.JPG" id="figure8" width= "70%"  height="auto" />
+    <div class="caption">Figure 8</div>
 </div>
 
-
+Figure <a href="#figure8">8</a> demonstrates the algorithm that we used to detect the pixels in which they were carrying outliers.
 
 <h4 id="more-information">4.3  Outputs</h4>
 
-We used the algorithm to detect the defect in the testing images, and for every dataset, we represented a result. 
+We used the algorithm to detect the defect in the testing images, and for every dataset, here is the result for each dataset.
 
+
+<ul>
+  <li>Training: Input normal data to learn latent representation (Encoder). Use the latent representation to reconstruct the first image (Decoder).</li>
+  <div style="align: left; text-align:center;">
+    <img src="/assets/img/Algorithm.JPG" id="figure8" width= "70%"  height="auto" />
+    <div class="caption">Figure 8</div>
+</div>
+  <li>Testing: An image with a defect will have a different output compared to the expected input. Hence errors will be high. Apply a threshold for the reconstruction error to detect the error. </li>
+</ul>
 
 
 
