--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -553,12 +553,14 @@ We used the algorithm to detect the defect in the testing images, and for every 
 
 
 <ul>
-  <li>Training: Input normal data to learn latent representation (Encoder). Use the latent representation to reconstruct the first image (Decoder).</li>
+  <li>Crack:</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/Algorithm.JPG" id="figure8" width= "70%"  height="auto" />
+    <img src="/assets/img/Crack_res.JPG" id="figure8" width= "70%"  height="auto" />
     <div class="caption">Figure 8</div>
 </div>
-  <li>Testing: An image with a defect will have a different output compared to the expected input. Hence errors will be high. Apply a threshold for the reconstruction error to detect the error. </li>
+  <li>Cut:</li>
+  <li>Hole:</li>
+  <li>Print:</li>
 </ul>
 
 
