--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -560,17 +560,17 @@ We used the algorithm to detect the defect in the testing images, and for every 
 </div>
   <li>Cut:</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/Crack_res.JPG" id="figure10" width= "100%"  height="auto" />
+    <img src="/assets/img/Cut_res.JPG" id="figure10" width= "100%"  height="auto" />
     <div class="caption">Figure 10</div>
 </div>
   <li>Hole:</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/Crack_res.JPG" id="figure11" width= "100%"  height="auto" />
+    <img src="/assets/img/Hole_res.JPG" id="figure11" width= "100%"  height="auto" />
     <div class="caption">Figure 11</div>
 </div>
   <li>Print:</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/Crack_res.JPG" id="figure12" width= "100%"  height="auto" />
+    <img src="/assets/img/Print_res.JPG" id="figure12" width= "100%"  height="auto" />
     <div class="caption">Figure 12</div>
 </div>
 </ul>
