--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -556,7 +556,7 @@ We used the algorithm to detect the defect in the testing images, and for every 
   <li>Crack:</li>
   <div style="align: left; text-align:center;">
     <img src="/assets/img/Crack_res.JPG" id="figure9" width= "100%"  height="auto" />
-    <div class="caption">Figure 9</div>
+    <div class="caption">Figure 9 &#964</div>
 </div>
   <li>Cut:</li>
   <div style="align: left; text-align:center;">
