--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -549,29 +549,29 @@ Figure <a href="#figure8">8</a> demonstrates the algorithm that we used to detec
 
 <h4 id="more-information">4.3  Outputs</h4>
 
-We used the algorithm to detect the defect in the testing images, and for every dataset, here is the result for each dataset.
+We used the algorithm to detect the defect in the testing images, and for every dataset, here is the result. From left to right Original Image, Output Image, Predicted Pixels, Ground Truth.
 
 
 <ul>
   <li>Crack:</li>
   <div style="align: left; text-align:center;">
     <img src="/assets/img/Crack_res.JPG" id="figure9" width= "100%"  height="auto" />
-    <div class="caption">Figure 9 &#964</div>
+    <div class="caption">Figure 9 &#964 = 0.2</div>
 </div>
   <li>Cut:</li>
   <div style="align: left; text-align:center;">
     <img src="/assets/img/Cut_res.JPG" id="figure10" width= "100%"  height="auto" />
-    <div class="caption">Figure 10</div>
+    <div class="caption">Figure 10 &#964 = 0.2</div>
 </div>
   <li>Hole:</li>
   <div style="align: left; text-align:center;">
     <img src="/assets/img/Hole_res.JPG" id="figure11" width= "100%"  height="auto" />
-    <div class="caption">Figure 11</div>
+    <div class="caption">Figure 11 &#964 = 0.25</div>
 </div>
   <li>Print:</li>
   <div style="align: left; text-align:center;">
     <img src="/assets/img/Print_res.JPG" id="figure12" width= "100%"  height="auto" />
-    <div class="caption">Figure 12</div>
+    <div class="caption">Figure 12 &#964 = 0.2</div>
 </div>
 </ul>
 
