--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -514,6 +514,13 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
     <div class="caption">Figure 5</div>
 </div>
 
+
+According the figure 2 we have an understanding towards
+True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
+which are:
+
+
+
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
     <div class="caption">Figure 6</div>
@@ -683,14 +690,6 @@ however, they were not able to have a good performance of
 the Recall, therefor according to our F1 metric, our approach
 outperforms the AE(SSIM) approach.
 </p>
-
-<h2 id="overview">Project Video</h2>
-
-<p><br /></p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
-
-
 
   </div>
 
