--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -588,12 +588,14 @@ The output depends on the parameter &#964. In figures <a href="#figure13">13</a>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Tau1.JPG" id="figure13" width= "70%"  height="auto" />
-    <div class="caption">Figure 13, &#964 = 0.2</div>
+    <div class="caption">Figure 13</div>
 </div>
+
+Figure <a href="#figure14">14</a> shows the effect of different &#964 .From left to right, &#964=0.1, &#964=0.2, &#964=0.7 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Tau2.JPG" id="figure14" width= "90%"  height="auto" />
-    <div class="caption">Figure 14, &#964 = 0.2</div>
+    <div class="caption">Figure 14</div>
 </div>
 
 
