--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -591,7 +591,7 @@ The output depends on the parameter &#964. In figures <a href="#figure13">13</a>
     <div class="caption">Figure 13</div>
 </div>
 
-Figure <a href="#figure14">14</a> shows the effect of different &#964 .From left to right, &#964=0.1, &#964=0.2, &#964=0.7 
+Figure <a href="#figure14">14</a> shows the effect of different &#964 .From left to right, &#964=0.1, &#964=0.2, &#964=0.7.
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Tau2.JPG" id="figure14" width= "90%"  height="auto" />
