--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -515,10 +515,15 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
 </div>
 
 
-According the figure 2 we have an understanding towards
-True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
+According the figure <a href="#figure2">2</a> we have an understanding towards
+True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
 which are:
 
+<math>
+  H(s) = ∫<sub>0</sub><sup>∞</sup> e<sup>-st</sup> h(t) dt
+</math>
+
+But because Precision and Recall usually play against each other, we may rely on their harmonic mean, which is the F1-score. 
 
 
 <div style="align: left; text-align:center;">
