--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -520,7 +520,7 @@ True Positive, True Negative, False Positive and False Negative. Based on that, 
 which are:
 
 <math>
-  C <box>dV<sub>out</sub><over>dt</box> = I<sub>b</sub>
+  Precision =  <box>TP<<over>TP+FP</box> = I<sub>b</sub>
   &tanh;(<box>κ(V<sub>in</sub>-V<sub>out</sub>)<over>2</box>)
 </math>
 
