--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -530,6 +530,8 @@ But because Precision and Recall usually play against each other, we may rely on
   H(s) = ∫<sub>0</sub><sup>∞</sup> e<sup>-st</sup> h(t) dt
 </math>
 
+<div class="cmath"> `f(x) = (x+2)/(2x+1)`          `x in RR,\ x !=-1/2`</div>
+
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
     <div class="caption">Figure 6</div>
