--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -519,16 +519,13 @@ According the figure <a href="#figure2">2</a> we have an understanding towards
 True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
 which are:
 
-<math>
-  C <box>dV<sub>out</sub><over>dt</box> = I<sub>b</sub>
-  &tanh;(<box>κ(V<sub>in</sub>-V<sub>out</sub>)<over>2</box>)
-</math>
+<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
 
 But because Precision and Recall usually play against each other, we may rely on their harmonic mean, which is the F1-score. 
 
-<math>
-  H(s) = ∫<sub>0</sub><sup>∞</sup> e<sup>-st</sup> h(t) dt
-</math>
+
 
 <div class="cmath"> `f(x) = (x+2)/(2x+1)`          `x in RR,\ x !=-1/2`</div>
 
