--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -520,8 +520,8 @@ True Positive, True Negative, False Positive and False Negative. Based on that, 
 which are:
 
 <div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
-<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
-<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Precision` = (TP)/(TP+FN)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Precision` = (TP + TN)/(TP + FP + FN + TN)`          `x in RR,\ x !=-1/2`</div>
 
 But because Precision and Recall usually play against each other, we may rely on their harmonic mean, which is the F1-score. 
 
