--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -520,14 +520,14 @@ True Positive, True Negative, False Positive and False Negative. Based on that, 
 which are:
 
 <div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
-<div class="cmath"> Precision` = (TP)/(TP+FN)`          `x in RR,\ x !=-1/2`</div>
-<div class="cmath"> Precision` = (TP + TN)/(TP + FP + FN + TN)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Recall` = (TP)/(TP+FN)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`          `x in RR,\ x !=-1/2`</div>
 
 But because Precision and Recall usually play against each other, we may rely on their harmonic mean, which is the F1-score. 
 
 
 
-<div class="cmath"> `f(x) = (x+2)/(2x+1)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> `F_1 = (2)/(Recall^(-1) + )`          `x in RR,\ x !=-1/2`</div>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
