--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -519,7 +519,7 @@ According the figure <a href="#figure2">2</a> we have an understanding towards
 True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
 which are:
 
-<div class="cmath"> Precision` = (TP)/(TP+FP)`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> Precision` = (TP)/(TP+FP)` Recall` = (TP)/(TP+FN)` Accuracy` = (TP + TN)/(TP + FP + FN + TN)`</div>
 <div class="cmath"> Recall` = (TP)/(TP+FN)`          `x in RR,\ x !=-1/2`</div>
 <div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`          `x in RR,\ x !=-1/2`</div>
 
@@ -527,7 +527,7 @@ But because Precision and Recall usually play against each other, we may rely on
 
 
 
-<div class="cmath"> `F_1 = (2)/(Recall^(-1) + )`          `x in RR,\ x !=-1/2`</div>
+<div class="cmath"> `F_1 = (2)/(Recall^(-1) + Precision^(-1)) = (2 * Recall *Precision)/(Recall + Precision)`</div>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
