--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -529,12 +529,14 @@ But because Precision and Recall usually play against each other, we may rely on
 
 <div class="cmath"> `F_1 = (2)/(Recall^(-1) + Precision^(-1)) = (2 * Recall *Precision)/(Recall + Precision)`</div>
 
+Figure <a href="#figure7">7</a> shows the F1 score during training over the Hole and Print validation set.
+
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_1-F1.JPG" id="figure6" width= "100%"  height="auto" />
     <div class="caption">Figure 6</div>
 </div>
 
-
+Figure <a href="#figure6">6</a> shows the F1 score during training over the Crack and Cut validation set.
 <div style="align: left; text-align:center;">
     <img src="/assets/img/2_2-F1.JPG" id="figure7" width= "100%"  height="auto" />
     <div class="caption">Figure 7</div>
