--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -518,10 +518,12 @@ The model has been trained over the mentioned dataset for 1000 epochs. We used t
 According the figure <a href="#figure2">2</a> we have an understanding towards
 True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
 which are:
+<center>
+  <div class="cmath"> Precision` = (TP)/(TP+FP)` Recall` = (TP)/(TP+FN)`</div>
 
-<div class="cmath"> Precision` = (TP)/(TP+FP)` Recall` = (TP)/(TP+FN)` Accuracy` = (TP + TN)/(TP + FP + FN + TN)`</div>
-<div class="cmath"> Recall` = (TP)/(TP+FN)`          `x in RR,\ x !=-1/2`</div>
 <div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`          `x in RR,\ x !=-1/2`</div>
+
+</center>
 
 But because Precision and Recall usually play against each other, we may rely on their harmonic mean, which is the F1-score. 
 
