--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -703,8 +703,14 @@ however, they were not able to have a good performance of
 the Recall, therefor according to our F1 metric, our approach
 outperforms the AE(SSIM) approach.
 </p>
-
   </div>
+
+<h2 id="more-information">More infomation</h2>
+
+<ul>
+  <li>Code: <a href="https://github.com/aminfadaei116/Anomaly-Detection">link</a> </li>
+  <li>Report: <a href="">link</a> </li>
+</ul>
 
   <!-- Footer -->
   <footer>
