--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -519,7 +519,7 @@ According the figure <a href="#figure2">2</a> we have an understanding towards
 True Positive, True Negative, False Positive and False Negative. Based on that, it is common to analyze four metrics
 which are:
 <center>
-  <div class="cmath"> Precision` = (TP)/(TP+FP)` Recall` = (TP)/(TP+FN)`</div>
+  <div class="cmath"> Precision` = (TP)/(TP+FP)` `    ` `    ` Recall` = (TP)/(TP+FN)`</div>
   <div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`</div>
 </center>
 
