--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -708,7 +708,7 @@ outperforms the AE(SSIM) approach.
 
 <ul>
   <li>Code: <a href="https://github.com/aminfadaei116/Anomaly-Detection">link</a> </li>
-  <li>Report: <a href="https://github.com/aminfadaei116/Anomaly-Detection/blob/main/Report.pdf">link</a> </li>
+  <li>Report: <a href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf">link</a> </li>
 </ul>
 
   </div>
