--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -587,7 +587,7 @@ We used the algorithm to detect the defect in the testing images, and for every 
 </div>
 </ul>
 
-
+The result can change depending on the value of &#964.
 
 
 <h2 id="more-information">5. Discussions</h2>
