--- a/projects/index.html
+++ b/projects/index.html
@@ -192,9 +192,9 @@
             <h5 class="card-title">Anomaly Detection</h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
-              
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Anomaly-Detection" target="_blank">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.mvtec.com/company/research/datasets/mvtec-ad" target="_blank">Data</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf" target="_blank">Report</a>
             </div>
           </div>
         </div>
