--- a/projects/index.html
+++ b/projects/index.html
@@ -151,7 +151,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">LiveX Learning Platform</h5>
+            <h5 class="card-title">Cycle GAN</h5>
             <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
