--- a/projects/index.html
+++ b/projects/index.html
@@ -149,13 +149,14 @@
         <a href="/projects/Data Analytics/CitiBikess/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
+          <img class="card-img-top" src="/assets/img/CycleGan.JPG" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">Cycle GAN</h5>
-            <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
+            <p class="card-text">Image segmentation using CycleGAN </p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf" target="_blank">Report</a>
               
             </div>
           </div>
