added a test image

--- a/projects/index.html
+++ b/projects/index.html
@@ -207,7 +207,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" />
+          <img class="card-img-top" src="/assets/img/test.gif" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">Anomaly Detection</h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
