--- a/projects/index.html
+++ b/projects/index.html
@@ -164,7 +164,7 @@
       </a>
     </div>
 
-<!--     <div class="project-card">  <!-- Project #4 -->
+<!--     <div class="project-card">  
       
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html">
       
