--- a/projects/index.html
+++ b/projects/index.html
@@ -113,9 +113,9 @@
             <p class="card-text">Measuring the accuracy and precision of Iphone 3D sensors.
 </p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
+             <!--  <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="link here" target="_blank">Report</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="link here" target="_blank">Report</a> -->
 
               
             </div>
