--- a/projects/index.html
+++ b/projects/index.html
@@ -107,7 +107,7 @@
         <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" width="65%" height="auto"  />
+          <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" width="65px" height="auto"  />
           <div class="card-body">
             <h5 class="card-title">Accuracy/Precision measurment pip-line</h5>
             <p class="card-text">Measuring the accuracy and precision of Iphone 3D sensors.
