--- a/projects/index.html
+++ b/projects/index.html
@@ -107,7 +107,7 @@
         <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" width="65px" height="auto"  />
+          <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" height="100px"  />
           <div class="card-body">
             <h5 class="card-title">Accuracy/Precision measurment pip-line</h5>
             <p class="card-text">Measuring the accuracy and precision of Iphone 3D sensors.
@@ -130,7 +130,7 @@
         <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
+          <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="200px" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">CitiBike</h5>
             <p class="card-text".>Analysing   
