--- a/projects/index.html
+++ b/projects/index.html
@@ -210,9 +210,9 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/test.gif" alt="project thumbnail" height="250px"/>
+          <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Anomaly Detection</h5>
+            <h5 class="card-title">Pose Estimator</h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
