--- a/projects/index.html
+++ b/projects/index.html
@@ -210,7 +210,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" height="250px"/>
+          <img class="card-img-top" src="/assets/img/pose.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Pose Estimator</h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
