--- a/projects/index.html
+++ b/projects/index.html
@@ -191,7 +191,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Deep_CA2_2.png" alt="project thumbnail" height="250px"/>
+          <img class="card-img-top" src="/assets/img/Deep_CA2_2.jpg" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Anomaly Detection</h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
