--- a/projects/index.html
+++ b/projects/index.html
@@ -134,7 +134,7 @@
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="250px" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">CitiBike</h5>
-            <p class="card-text".>Analysing   
+            <p class="card-text".>Analysing the trend and usage of citibikes in New York City. 
 
 </p>
             <div class="row ml-1 mr-1 p-0">
