--- a/projects/index.html
+++ b/projects/index.html
@@ -153,7 +153,7 @@
         <a href="/projects/Data Analytics/CitiBikess/11">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CycleGan.JPG" alt="project thumbnail" height="250px"/>
+          <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Cycle GAN</h5>
             <p class="card-text">Image segmentation using CycleGAN </p>
