--- a/projects/index.html
+++ b/projects/index.html
@@ -173,7 +173,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" height="250px"/>
+          <img class="card-img-top" src="/assets/img/Segment.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Multi-Scale image segmentation</h5>
             <p class="card-text">Image segmentation using hierarchical mutli-scale attention model.</p>
