--- a/projects/index.html
+++ b/projects/index.html
@@ -133,10 +133,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="250px" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">CitiBike</h5>
-            <p class="card-text".>Analysing the trend and usage of citibikes in New York City. 
-
-</p>
+            <h5 class="card-title">CitiBike<p>This is a paragraph.</p></h5>
+            <p class="card-text".>Analysing the trend and usage of citibikes in New York City.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
