--- a/projects/index.html
+++ b/projects/index.html
@@ -153,7 +153,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Cycle GAN</h5>
+            <h5 class="card-title">Cycle GAN<p> </p></h5>
             <p class="card-text">Image segmentation using CycleGAN </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
@@ -192,7 +192,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Deep_CA2_2.jpg" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Anomaly Detection</h5>
+            <h5 class="card-title">Anomaly Detection<p> </p></h5>
             <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Anomaly-Detection" target="_blank">Code</a>
@@ -211,7 +211,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/pose.jpg" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Pose Estimator</h5>
+            <h5 class="card-title">Pose Estimator<p> </p></h5>
             <p class="card-text">.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
