--- a/projects/TestBench/index.html
+++ b/projects/TestBench/index.html
@@ -96,56 +96,13 @@
 <p>Tutoring system for kindergarten and school children based on a software platform that runs in the cloud, Windows Phone 7 devices and a set of electronic learning cubes called <b>IQubes</b> (our hardware invention) as part of team IQube that competed in the world finals of the Microsoft Imagine Cup competition.
 Our project won the Imagine Cup Romanian National Finals in 2012, and was ranked among the top 20 in the World Finals in Sydney, Australia.</p>
 
-<p><br /></p>
-
-<h2 id="overview">Overview</h2>
-
-<p><br /></p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
-
-<p><br /></p>
-
-<h2 id="iqube">IQube</h2>
-
-<table>
-  <tbody>
-    <tr>
-      <td>IQubes are electronic smart cubes with an LCD screen on each of its side, with many sensors and capable of communicating with other IQubes and with the cloud. They are mainly used as a hands-on user interface for an experiment. They can be combined in many different ways to perform a large variety of experiments.</td>
-      <td><img src="/assets/img/iqubes.jpg" alt="iqubes" width="400px" height="200px" /></td>
-    </tr>
-  </tbody>
-</table>
-
-<p>Demos:</p>
-<ul>
-  <li><a href="https://www.youtube.com/watch?v=5ECKVCUd-_U">Kindergardern</a></li>
-  <li><a href="https://www.youtube.com/watch?v=ZXDn1UkRopU">Math experiment</a></li>
-  <li><a href="https://www.youtube.com/watch?v=oRxCezetktQ">Chemistry experiment</a></li>
-  <li><a href="https://www.youtube.com/watch?v=_GwqvTuD3vU">Chemistry experiment 2</a></li>
-</ul>
-
-<p><br /></p>
-
-<h2 id="smartphone-demos">Smartphone Demos</h2>
-<ul>
-  <li><a href="https://www.youtube.com/watch?v=vw0UVKfAWHY">Light and centrifugal force experiment</a></li>
-  <li><a href="https://www.youtube.com/watch?v=anV1wU7SF5E">Inclined plane experiment</a></li>
-</ul>
-
-<p><br /></p>
-
-<h2 id="more-information">More information</h2>
-
-<p>Meet the <a href="https://www.youtube.com/watch?v=3nQ2rQ2Ef7g">team</a>. <br />
-Find us on <a href="https://www.facebook.com/LiveXLearningPlatform/">Facebook</a>.</p>
 
 
   </div>
 
   <!-- Footer -->
   <footer>
-    &copy; Copyright 2021 Otilia Stretcu.
+    &copy; Copyright 2023 Amin Fadaeinejad.
     
     
   </footer>
