--- a/projects/index.html
+++ b/projects/index.html
@@ -104,7 +104,7 @@
   
     <div class="project-card">  <!-- Citi Bike Project Page -->
       
-        <a href="/projects/Data Analytics/CitiBike/index.html">
+        <a href="/projects/TestBench/index.html">
       
         <div class="card">
           <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" height="250px"  />
