--- a/projects/TestBench/index.html
+++ b/projects/TestBench/index.html
@@ -87,7 +87,7 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>LiveX Learning Platform</h1>
+  <h1>Accuracy and Precision of 3D sensors (Coming soon)</h1>
   <h6>Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</h6>
 
 
