--- a/projects/index.html
+++ b/projects/index.html
@@ -159,7 +159,8 @@
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
               <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf" target="_blank">Report</a>
-              
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
+
             </div>
           </div>
         </div>
