--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -106,7 +106,7 @@ h3 {text-align: center;}
 
 <p><br />Since 2013 a shared bicycle system known as Citi Bike is available in New York City. The benefits of having such a system include reducing New Yorkers’ dependence on automobiles and encouraging public health through the exercise attained by cycling. Additionally, users who would otherwise spend money on public transit may find bicycling more economical – so long as they are aware of Citibike's pricing constraints.</p>
 
-<h2 id="overview">overview</h2>
+<!-- <h2 id="overview">overview</h2>
 
 <p><br /></p>
 <h3><iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
@@ -141,8 +141,7 @@ h3 {text-align: center;}
 <h2 id="overview">Proposed Expansion Policy</h2>
 
 
-<p><br /></p>
-
+ -->
 
 
 
