--- a/projects/TestBench/index.html
+++ b/projects/TestBench/index.html
@@ -88,7 +88,9 @@
   <div class="content">
     
   <h1>Accuracy and Precision of 3D sensors (Coming soon)</h1>
-  <h6>Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</h6>
+
+  
+<!--   <h6>Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</h6>
 
 
 <p><br /></p>
@@ -97,7 +99,7 @@
 Our project won the Imagine Cup Romanian National Finals in 2012, and was ranked among the top 20 in the World Finals in Sydney, Australia.</p>
 
 
-
+ -->
   </div>
 
   <!-- Footer -->
