--- a/projects/index.html
+++ b/projects/index.html
@@ -136,9 +136,10 @@
             <h5 class="card-title">CitiBike<p><br /></p></h5>
             <p class="card-text".>Analysing the trend and usage of citibikes in New York City.</p>
             <div class="row ml-1 mr-1 p-0">
-              <!-- <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a> -->
+              <!-- Change the repo when the new code has been done -->
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://ride.citibikenyc.com/system-data" target="_blank">Data </a>
-              <!-- <a class="badge green waves-effect font-weight-light mr-1" href="link here" target="_blank">Report</a> -->
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/DAV_Project-Final-Report.pdf" target="_blank">Report</a>
               
             </div>
           </div>
